--- a/package.json
+++ b/package.json
@@ -3,22 +3,28 @@
   "version": "1.2.1",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "5.15.1",
+    "@mui/material": "^5.11.4",
     "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "13.3.0",
     "@testing-library/user-event": "14.3.0",
+    "axios": "^1.2.2",
     "bootstrap": "4.5.3",
     "chart.js": "2.9.4",
     "eslint-plugin-flowtype": "8.0.3",
+    "firebase": "^9.15.0",
     "headroom.js": "0.12.0",
     "moment": "2.29.4",
+    "node-sass": "^8.0.0",
     "nouislider": "14.6.3",
-    "react": "18.2.0",
+    "react": ">=16.8.0",
     "react-chartjs-2": "2.11.1",
     "react-datetime": "3.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": ">=16.8.0",
     "react-router-dom": "5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "3.1.1",
     "react-slick": "0.29.0",
     "reactstrap": "8.9.0",
