--- a/functions/package.json
+++ b/functions/package.json
@@ -14,9 +14,13 @@
   "main": "index.js",
   "dependencies": {
     "cors": "^2.8.5",
-    "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.18.0",
-    "nodemailer": "^6.9.0"
+    "express": "^4.18.2",
+    "express-validator": "^6.14.2",
+    "firebase-admin": "^10.3.0",
+    "firebase-functions": "^3.24.1",
+    "node-fetch": "^2.6.1",
+    "nodemailer": "^6.9.0",
+    "request-promise": "^4.2.6"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.2.0"
