--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-chartjs-2": "2.11.1",
     "react-datetime": "3.1.1",
     "react-dom": ">=16.8.0",
+    "react-google-invisible-recaptcha": "^0.2.12",
+    "react-google-recaptcha": "^2.1.0",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "^5.0.1",
     "react-select": "3.1.1",
@@ -37,7 +40,7 @@
   },
   "optionalDependencies": {
     "jquery": "3.5.1",
-    "typescript": "4.7.4"
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
