--- a/.env
+++ b/.env
@@ -5,6 +5,8 @@ REACT_APP_FIREBASE_DATABASE_URL="https://mjmdev-ab175-default-rtdb.firebaseio.co
 REACT_APP_FIREBASE_PROJECT_ID="mjmdev-ab175"
 REACT_APP_FIREBASE_STORAGE_BUCKET="mjmdev-ab175.appspot.com"
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID="52884965616"
+REACT_APP_FIREBASE_APP_ID="1:52884965616:web:c330f3f2175ec867565a35"
+REACT_APP_FIREBASE_MEASUREMENT_ID="G-PDBN3KXCN6"
 
 # recaptcha
 REACT_APP_SECRET_KEY="6Le0oP4jAAAAAE8vjCiuntDJprDKzZHEgczu1wsF"
